--- a/index.html
+++ b/index.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
 <html class="no-js" lang="de-DE">
-  <head> </head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Project Barbara</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <!--
+    Template 2091 Ziggy
+    http://www.tooplate.com/view/2091-ziggy
+    -->
+    <meta
+      name="description"
+      content="Project Barbara is a Chatbot developed for different streaming platforms like twitch.tv and mixer.com focused on multiuser stream channels"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
 
   <body>
     <div id="root"></div>
+
+    <!-- Dependencies -->
+    <script src="./node_modules/react/umd/react.development.js"></script>
+    <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
+
+    <!-- Main -->
+    <script src="./dist/main.js"></script>
   </body>
 </html>
